--- a/src/contact/Contact.css
+++ b/src/contact/Contact.css
@@ -2,11 +2,26 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .header {
   display: flex;
   justify-content: center;
+  width: 100%;
   background-color: rgb(248, 226, 199);
+  margin-bottom: 10px;
 }
 .title {
   color: #67a6a7ff;
+}
+
+form {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
